# tapeforge-dock

./: README.md
backend/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: crew.py  main.py  seed.py
backend/app/api/: router.py
backend/app/api/routes/: bootstrap.py  crew.py  diagnostics.py  health.py  knowledge.py  sessions.py  systems.py
backend/app/core/: config.py  db.py
backend/app/models/: dock.py
backend/tests/: test_api.py
frontend/: env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: fonts.css  global.css
frontend/src/components/kit/: Badge.vue  Bars.vue  Btn.vue  DCard.vue  DockDot.vue  Icon.vue  PageHead.vue  Pill.vue  Ring.vue  SecLabel.vue  Spark.vue  Wordmark.vue
frontend/src/components/shell/: AppColumn.vue  AppSidebar.vue  CommandPalette.vue  CrewPanel.vue  CrewRail.vue  TopBar.vue
frontend/src/composables/: useBreakpoint.ts
frontend/src/design/: tokens.ts
frontend/src/dock/: api.ts  crew.ts  data.ts  status.ts
frontend/src/docs/: content.ts  manifest.ts  render.ts
frontend/src/docs/__tests__/: docs.spec.ts
frontend/src/docs/content/: plan.md
frontend/src/docs/content/developer/: architecture.md  build-system.md  migration.md  openspec.md  overview.md  protocol.md
frontend/src/router/: index.ts
frontend/src/stores/: dock.ts
frontend/src/views/: CrewView.vue  DiagnosticsView.vue  DocumentationView.vue  KnowledgeView.vue  OverviewView.vue  SessionDetailView.vue  SessionsView.vue  SystemsView.vue
(+28 files in other folders)
